hphp/test/zend/bad/ext/spl/tests/SplFileObject_getchildren_error001.php
<?php
$s = new SplFileObject( __FILE__ );
$s->getChildren('string');

?>